--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,10 @@
   align-items: center;
   display: flex;
   border-radius: 15px;
-  background-color: rgb(206, 206, 206);
+  border: 1px solid black;
   padding: 40px;
   gap: 40px;
+  box-shadow: 5px 5px #888888;
 }
 
 .main__text {
@@ -57,4 +58,15 @@
 
 .main__image {
   height: 300px;
+}
+
+.main__pesquisar {
+  width: 300px;
+  height: 40px;
+}
+
+.main__button {
+  height: 40px;
+  width: 80px;
+  margin-left: 5px;
 }
