--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,34 @@
   width: 80px;
   margin-left: 5px;
 }
+
+.pokedex__container {
+  display: flex;
+  padding: 40px;
+  gap: 20px;
+}
+
+.pokedex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  padding: 20px;
+  height: 80svh;
+}
+
+.pokedex__buscar {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.pokedex__pesquisar {
+  width: 300px;
+  height: 40px;
+}
+
+.pokedex__button {
+  height: 40px;
+  width: 80px;
+  margin-left: 5px;
+}
