--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,9 @@
   --cor-steel: #b7b7ce;
   --cor-fairy: #d685ad;
   --cor-red: #cc0000;
+  --cor-gray: #595858;
 }
-
+/* COMPONENTE HEADER*/
 .header {
   display: flex;
   align-items: center;
@@ -52,6 +53,7 @@
   text-decoration: underline;
 }
 
+/* BODY GERAL*/
 #root {
   font-family: "Montserrat", sans-serif;
   display: flex;
@@ -60,6 +62,7 @@
   background-image: linear-gradient(var(--cor-red), #570000);
 }
 
+/* MAIN COMPONENTE */
 .main {
   margin: 6vw 1vh 2vh;
   flex: 1;
@@ -87,7 +90,7 @@
   flex-direction: column;
   flex-grow: 1;
   justify-content: space-around;
-  margin: 5vw;
+  margin: 9vh 12vh;
   gap: 40px;
 }
 
@@ -109,7 +112,6 @@
 
 .main__pesquisar__button {
   height: 40px;
-  margin-left: 5px;
   border: solid 1px black;
   box-shadow: 2px 2px rgb(146, 146, 146);
   border-radius: 50%;
@@ -120,6 +122,7 @@
   color: red;
 }
 
+/* PAGINA POKEDEX */
 .pokedex__container {
   display: flex;
   padding: 40px;
@@ -156,4 +159,63 @@
 
 .pokedex__image {
   height: 200px;
+}
+
+/* COMPONENTE SINGLE ITEM*/
+.single-item {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border: solid 1px black;
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+  gap: 10px;
+}
+
+.single-item__div-image {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+}
+
+.single-item__texts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1vh;
+}
+
+.single-item__id {
+  color: var(--cor-gray);
+}
+
+.single-item__name {
+  font-weight: 600;
+}
+
+.single-item__types {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.single-item__type {
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin-right: 5px;
+  margin-bottom: 2vh;
+  color: white; /* Cor do texto */
+  font-weight: bold; /* Negrito */
+}
+
+/* COMPONENTE ITEM LIST */
+.item-list__container {
+  display: grid;
+  gap: 2vh;
+  margin: 2vh;
+  grid-template-columns: repeat(auto-fit, minmax(172px, 1fr));
 }
