--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,7 @@
   flex-direction: column;
   align-items: stretch;
   flex-grow: 1;
+  position: relative;
 }
 
 .pokedex__divs {
@@ -165,6 +166,7 @@
   flex-direction: row;
   justify-content: space-around;
   margin: 10vh 1vw 10vh;
+  flex-wrap: wrap;
 }
 .pokedex__header {
   display: flex;
@@ -195,10 +197,18 @@
 .pokedex__buscar {
   display: flex;
   flex-wrap: nowrap;
+  position: absolute;
+  bottom: 2vh;
+  left: 2vw;
+  gap: 1vw;
 }
 
 .pokedex__pesquisar {
-  width: 300px;
+  border-radius: 20px;
+  border: solid 1px black;
+  box-shadow: 2px 2px rgb(146, 146, 146);
+  width: 400px;
+  text-align: center;
   height: 40px;
 }
 
@@ -327,6 +337,49 @@
     margin-right: 1vw;
     flex-grow: 1;
   }
+
+  .pokedex__divs {
+    gap: 5vh;
+    margin: 5vh;
+    margin-bottom: 10vh;
+    padding: 4vh 2vw 2vw;
+  }
+
+  .pokedex__div__info {
+    width: 70vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pokedex__div__info p {
+    margin-left: 5vw;
+  }
+
+  .pokedex__div__stats {
+    width: 70vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pokedex__stat {
+    justify-content: center;
+  }
+
+  .pokedex__div__stats h2 {
+    margin-bottom: 4vh;
+  }
+
+  .pokedex__pesquisar {
+    width: 60vw;
+  }
+
+  .pokedex__buscar {
+    gap: 2vw;
+  }
+
+  .progress-bar-container {
+    width: 40vw;
+  }
 }
 
 @media all and (max-width: 480px) {
@@ -360,5 +413,48 @@
     height: 20vh;
     gap: 2px;
     font-size: smaller;
+  }
+
+  .pokedex__divs {
+    gap: 5vh;
+    margin: 2vh;
+    margin-bottom: 10vh;
+    padding: 0;
+  }
+
+  .pokedex__div__info {
+    width: 70vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pokedex__div__info p {
+    margin-left: 5vw;
+  }
+
+  .pokedex__div__stats {
+    width: 70vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pokedex__stat {
+    justify-content: center;
+  }
+
+  .pokedex__div__stats h2 {
+    margin-bottom: 4vh;
+  }
+
+  .pokedex__pesquisar {
+    width: 60vw;
+  }
+
+  .pokedex__buscar {
+    gap: 2vw;
+  }
+
+  .progress-bar-container {
+    width: 40vw;
   }
 }
